# crewai_project2

./: crewai_flow.html  pyproject.toml
src/project2/: main.py
