[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Talha Iftikhar", email = "talhaiftikhar13209@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.105.0",
]

[project.scripts]
project2 = "project2:main"

run = "project2.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
